[package]
edition      = "2024"
name         = "esp-csi-collector"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp-csi-collector"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0-rc.0", features = ["esp32s3"] }


esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

critical-section = "1.2.0"
esp-csi-rs = { version = "0.3.0", features = ["esp32s3", "println"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
