[package]
edition      = "2021"
name         = "esp-csi-collector"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esp-csi-collector"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32s3"] }


esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }

critical-section = { version = "1.2.0", default-features = false }
esp-csi-rs = { version = "0.3.0", features = ["esp32s3", "println"] }
esp-println = "0.15.0"
esp-alloc = { version = "0.8.0", optional = false }
static_cell = "2.1.1"
embassy-executor = "0.7.0"
embassy-time = { version = "0.4.0", optional = false, features = [
    "generic-queue-8",
] }
esp-hal-embassy = { version = "0.9.0", default-features = false, optional = false, features = [
    "executors", "esp32s3"
] }
esp-wifi = { version = "0.15.1", features = ["esp32s3", "wifi"] }
esp-sync = { version = "0.1.1", features = ["esp32s3"] }
embassy-net = { version = "0.6.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
heapless = "0.8.0"
